<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrimeActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/textBrown"
            android:textSize="24sp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearText"
            android:hint="yyyy"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/textBrown"
            android:textSize="24sp"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monthText"
            android:hint="mm"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textColor="@color/textBrown"
            android:textSize="24sp"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latitudeText"
            android:hint="52.629729"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textColor="@color/textBrown"
            android:textSize="24sp"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/longitudeText"
            android:hint="-1.131592"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crime_button"
            android:background="@drawable/button_shape"
            android:textColor="@color/buttonText"
            android:text="@string/crime_button" />
    </LinearLayout>








</LinearLayout>